# rusoda

./: Cargo.toml  LICENSE  README.en.md  README.md
src/: arrops.rs  common.rs  ddot_test.rs  lib.rs  lsoda.rs  lsoda_test.rs  main.rs
src/blas/: daxpy.rs  ddot.rs  dgefa.rs  dgesl.rs  dscal.rs  fnorm.rs  idamax.rs  mod.rs  prelude.rs  vmnorm.rs
tests/: lsoda_test.rs
